--- a/about/index.html
+++ b/about/index.html
@@ -53,5 +53,5 @@ title: About Caroline Beyne
   </section>
 </article>
 <hr/>
-{% include subscribe.html %}
+<!-- {% include subscribe.html %} -->
 {% include footer.html %}
