--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Byoute ++
     </div>
   </div>
 </section>
-<section class="section--postsWrapper">
+<section class="section--postsWrapper section--bg">
   <div class="container">
     <div class="blockGroup">
       <ul class="blockGroup-list">
