--- a/source/404.html
+++ b/source/404.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Erro 404: Página não encontrada"
+title: "Error 404: Page not found"
 slug: error404
 permalink: 404.html
 ---
